--- a/frontend/src/components/homepage.css
+++ b/frontend/src/components/homepage.css
@@ -135,6 +135,16 @@ h2 {
   justify-content: space-between; /* Keeps space between logo and links */
 }
 @media (max-width: 768px) {
+  .main-content {
+    flex-direction: column;
+  }
+
+  .looking-job,
+  .looking-handyman {
+    width: 100%;
+    max-width: 90%;
+  }
+
   .logo {
     font-size: 1.5rem;
   }
@@ -161,8 +171,11 @@ h2 {
 {
   box-shadow: 0px 2px 100px rgba(141, 130, 130, 0.24);}
 
+  
+  
+
 /* Heading inside looking-job */
-.looking-job h2 {
+.looking-job  {
   font-family: "Playfair Display", serif;
   font-size: 1.8rem;
   font-weight: 700;
@@ -184,9 +197,52 @@ h2 {
   transition: 0.5s;
 }
 
+
+.looking-handyman button {
+  font-family: "Lato", sans-serif;
+  background-color: #c8c8cae0; /* Yellow Button */
+  color: rgb(44, 44, 44);
+  font-size: 1rem;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: 0.5s;
+}
 .looking-job button:hover {
   background-color: rgba(255, 255, 255, 0.2);
   box-shadow: 0 2px 10px rgba(245, 245, 245, 0.856);
   color: #e9e9e9e0;
 
+}
+
+.looking-handyman button:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 2px 10px rgba(245, 245, 245, 0.856);
+  color: #e9e9e9e0;
+
+}
+.looking-handyman 
+{font-family: "Playfair Display", serif;
+font-size: 1.8rem;
+font-weight: 700;
+color: white; /* Explicitly setting white text */
+margin-bottom: 15px;
+}
+.looking-handyman
+{
+  text-align: center;
+  background: linear-gradient(135deg, #3d4144d5, rgba(54, 54, 54, 0.692)); 
+  
+  padding: 40px 20px;
+  border-radius: 10px;
+  transition: 0.5s;
+  
+  color: white; /* Ensures text color is white */
+  max-width: 600px;
+  margin: 50px auto;
+}
+.looking-handyman:hover {
+  box-shadow: 0px 2px 100px rgba(141, 130, 130, 0.24);
 }
